<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dip">

    <TextView
        android:layout_marginTop="10dip"
        android:layout_marginLeft="15dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trust_rent_title"
        android:textSize="18sp"
        android:textColor="@color/default_txt_color"/>


    <TextView
        android:layout_marginTop="10dip"
        android:layout_marginLeft="15dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trust_rent_abstract"
        android:textSize="15sp"
        android:textColor="@color/tab_defualt_color"/>
    
    <Button
        android:id="@+id/btn_trust_rent"
        android:textColor="@color/white"
        android:layout_marginTop="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginLeft="10dp"
        android:background="@color/button_back_color"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trust_rent_button_text"/>
</LinearLayout>